# msci-hep

./: .gitignore  README.md  id_rsa.pub
ICHEPanalysis/: ANDY_AnalysisReader_VHbb1Lep.cxx  AnalysisReader_VHbb1Lep.cxx  MVATree_VHbb.cxx  comboSubmit.sh  framework-read.cfg  sensitivities_BDT1.txt  sensitivities_initial.txt
bMetric/: ROC.py  analyse.py  histDivide.py  run_analysis.sh  tag_metric.C  tag_metric.h  tag_metric_C.d  tag_metric_no_sv0.C  tag_metric_no_sv0.h
bTag/: BCjets.C  BCjets.h  CMakeLists.txt  bTag.cxx  bTag.h  bTagLinkDef.h
columbia-tut/: Analyze.C  Analyze.h  AnalyzeCuts.C  AnalyzeCuts.h  AnalyzeEnergy.C  AnalyzeEnergy.h  AnalyzeVariables.C  AnalyzeVariables.h  AnalyzeVariablesCut.C  AnalyzeVariablesCut.h  c1.C  drawtest.py
deeplearningNN/: NN_grid.py  NN_stacker.py  NN_train.py  basic_2h_11-10-10-10-1_2jet.json  basic_2h_11-10-10-14-1_2jet.json  basic_2h_11-10-10-6-1_2jet.json  basic_2h_11-10-14-10-1_2jet.json  basic_2h_11-10-14-14-1_2jet.json  basic_2h_11-10-14-6-1_2jet.json  basic_2h_11-10-6-10-1_2jet.json  basic_2h_11-10-6-14-1_2jet.json  basic_2h_11-10-6-6-1_2jet.json  basic_2h_11-14-10-10-1_2jet.json  basic_2h_11-14-10-14-1_2jet.json  basic_2h_11-14-10-6-1_2jet.json  basic_2h_11-14-14-10-1_2jet.json  basic_2h_11-14-14-14-1_2jet.json  basic_2h_11-14-14-6-1_2jet.json  basic_2h_11-14-6-10-1_2jet.json  basic_2h_11-14-6-14-1_2jet.json  basic_2h_11-14-6-6-1_2jet.json  basic_2h_11-6-10-10-1_2jet.json  basic_2h_11-6-10-14-1_2jet.json  basic_2h_11-6-10-6-1_2jet.json  basic_2h_11-6-14-10-1_2jet.json  basic_2h_11-6-14-14-1_2jet.json  (+85 more)
docs/: Makefile  (+3 more)
(+729 files in other folders)
